--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ html {
 body {
     font-family: 'Poppins',sans-serif;
     min-width: 100vh;
-    height: 10000px;
     overflow-x: hidden;
     position: relative;
 }
@@ -64,6 +63,9 @@ list-style: none;
     font-size: 16px;
     border-radius: 10px;
     transition: .4s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .btn:hover {
     background-color: transparent;
@@ -82,7 +84,7 @@ list-style: none;
     line-height: .8;
     color: #222;
     position: relative;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
     padding-bottom: 20px;
 
 }
@@ -318,3 +320,395 @@ header .container {
     text-align: center;
    }
  }
+
+
+ /* -------------About SEctioin ------------------ */
+ .about {
+    margin-top: 60px;
+ }
+ .about_container {
+    column-gap: 0;
+    align-items: center;
+ }
+ .about_content p {
+    color: #333;
+    margin: 20px 0 15px;
+ }
+ .about_info {
+    display: flex;
+    column-gap: 20px;
+    margin-top: 40px;
+ }
+ .about_info > div {
+    text-align: center;
+    background-color: var(--second-color);
+    border: 2px dashed var(--main-color);
+    border-radius: 10px;
+    padding: 10px 15px;
+    width: 40%;
+
+ }
+ .about_info > div .number {
+    color: var(--main-color);
+    font-size: 32px;
+    font-weight: 700;
+ }
+ .about_info > div .text {
+    font-size: 15px;
+    font-weight: 600;
+ }
+
+ @media screen and (max-width : 992px) {
+    .about_container {
+        grid-template-columns: 2fr 3fr;
+    }
+ }
+
+ @media screen and (max-width : 768px) {
+    .about_container {
+        grid-template-columns: 1fr;
+        justify-content: center;
+        text-align: center;
+    }
+    .about_info {
+        justify-content: center;
+    }
+    .about_info > div .text {
+        font-size: 14px;
+    }
+ }
+ 
+
+ /* Resume section */
+ .resume_container {
+    grid-template-columns: 1fr 5fr;
+ }
+ .resume_tabs ul {
+    position: sticky;
+    top: 150px;
+    position: --webkit-sticky;
+ }
+ .resume_tabs ul li a {
+    font-weight: 700;
+    margin-bottom: 10px;
+    display: block;
+    color: #222;
+    position: relative;
+    transition: .3s;
+ }
+ .resume_tabs ul li a.current {
+    color: var(--main-color);
+    margin-left: 20px;
+    position: relative;
+ }
+ .resume_tabs ul li a.current::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -35px;
+    transform: translate(-50%);
+    width: 30px;
+    height: 2px;
+    background-color: var(--main-color);
+ }
+ .page {
+    margin-bottom: 70px;
+ }
+ .page_heading {
+    font-size: 25px;
+    font-weight: 500;
+    color: var(--title-color);
+    margin-bottom: 25px;
+ }
+ .resume_wrap {
+    background-color: #faf9ff;
+    margin-bottom: 15px;
+    padding: 40px 30px;
+    display: flex;
+    position: relative;
+    border-radius: 10px;
+    transition: .3s;
+ }
+ .resume_wrap_icon {
+    background-color: var(--main-color);
+    width: 100px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ .resume_wrap_icon ion-icon {
+    font-size: 25px;
+    color: #fff;
+ }
+ .resume-wrap-content {
+    width: calc(100% -100px);
+    padding: 0 0 10px 10px;
+ }
+
+.resume_wrap .data {
+    font-weight: 600;
+}
+.resume-wrap-conten h4 {
+    font-size: 20px;
+    color: var(--title-color);
+}
+.resume-wrap-conten .position {
+     color: var(--subtitle-color);
+     font-size: 14px;
+     font-weight: 400;
+
+}
+.resume-wrap-conten p {
+    color: var(--subtitle-color);
+    font-size: 14px;
+    margin-top: 15px;
+}
+.resume_wrap:hover {
+    background-color: var(--main-color);
+    color:  #faf0ff;
+}
+.resume_wrap:hover .resume_wrap_icon {
+    background-color: #faf0ff;
+    /* color: var(--main-color); */
+}
+.resume_wrap:hover .resume_wrap_icon ion-icon {
+    color: var(--main-color);
+}
+/* .resume_wrap:hover h4,
+.resume_wrap:hover span,
+.resume_wrap:hover p {
+    color: #fff;
+} */
+
+.pregressBoxs {
+    gap: 3rem;
+}
+.progress_name {
+    display: flex;
+    justify-content: space-between;
+    font-weight: 500;
+    color: var(--title-color);
+    margin-bottom: 10px;
+}
+.pregress {
+    width: 100%;
+    height: 7px;
+    border-radius: 10px;
+    background-origin: var(--second-color);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, .1);
+}
+.pregress_bar{
+    height: 100%;
+    border-radius: 10px;
+    background-color: var(--main-color);
+    position: relative;
+}
+.pregress_bar::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: calc(100% - 7px);
+    transform: translatey(-50%);
+    height: 15px;
+    width: 15px;
+    background-color: var(--main-color);
+    border-radius: 50%;
+}
+
+@media  screen and (max-width : 992px) {
+    .resume_container {
+        grid-template-columns: 1fr;
+    }
+    .resume_tabs {
+        display: none;
+    }
+    .resume_wrap {
+        padding: 20px 15px;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .resume_wrap {
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .resume_wrap .resume_wrap_icon {
+        margin-bottom:  15px;
+    }
+    .resume-wrap-content {
+        width: 100%;
+    }
+    .pregressBoxs {
+        grid-template-columns: 1fr;
+    }
+}
+
+/* porfliol */
+
+.porfolio_container{
+    grid-template-columns: 2fr 2fr 2fr;
+    
+}
+.Por_card{
+    background-color: #faf9ff;
+    height: auto;
+    display: flex;
+    border-radius: 5px;
+    padding-top: 10px;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    margin-bottom: 20px;
+}
+.Por_card:hover img{
+    transform: translateY(-20px);  
+}
+.Por_card:hover {
+    border: 1px solid var(--main-color);
+}
+
+.Por_card img {
+    position: relative;
+    transition: transform 0.3s ease; 
+    width: 90%;
+    height: 50%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+.por_texts {
+    margin-top: 10px;
+    width: calc(100% -110px);
+    padding: 0 0 10px 10px;
+}
+.por_texts h4 {
+    font-size: 16px;
+    color: var(--title-color);
+}
+.por_texts p {
+    color: var(--subtitle-color);
+    font-size: 14px;
+    margin-top: 8px;
+}
+.por_links{
+    position: absolute;
+    display: flex;
+    bottom: 30px;
+    width: 80%;
+    justify-content: space-between;
+    
+}
+
+@media  screen and (max-width : 992px) {
+    .porfolio_container {
+        grid-template-columns: 2fr 2fr;
+    } 
+}
+
+@media  screen and (max-width : 576px) {
+    .porfolio_container {
+        grid-template-columns: 1fr;
+    } 
+}
+/* contact */
+.contact_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.contact_container > p {
+    font-weight: 300;
+}
+.contact_container h1 {
+    font-family: "Poppins", sans-serif;
+    font-size: 48px;
+    font-weight: 600;
+}
+.contact_links{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 2rem;
+    width: 60%;
+    height: 80px;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    margin: 2rem auto; 
+}
+.contact_links a {
+    color: black;
+    text-decoration: none;
+    text-decoration-color: white;
+    font-size: 20px;
+    margin-left: 10px;
+}
+.inside_link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.inside_link ion-icon {
+    font-size: 20px;
+}
+
+@media  screen and (max-width : 992px) {
+    .contact_links a { 
+        font-size: 16px;   
+    }  
+}
+@media  screen and (max-width : 790px) {
+    .contact_links a { 
+        font-size: 14px;   
+    }  
+    .footer_menu {
+        align-items: center;
+        justify-content: center;   
+        
+    }
+    .contact_links {
+        flex-direction: column;
+    }
+
+}
+
+/* changing _ menu */
+.footer_menu_item {
+    display: inline-block;
+}
+.footer_menu_link {
+    padding: 5px 10px;
+    font-size: 25px;
+    position: relative;
+    transition: .4s;
+    color: #333;
+    font-weight: 500;
+}
+.footer_menu_link::before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left :0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--main-color);
+    transform: scale(0);
+    transition: .4s;
+}
+.footer_menu_link:hover {
+    color: var(--main-color);
+}
+.active-link {
+    color: var(--main-color);
+}
+
+.header_sections {
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+.last_section {
+    margin-bottom: 30px;
+}
