--- a/style.css
+++ b/style.css
@@ -431,7 +431,7 @@ header .container {
  }
  .resume_wrap_icon {
     background-color: var(--main-color);
-    width: 100px;
+    width: 50px;
     height: 50px;
     border-radius: 50%;
     display: flex;
@@ -443,7 +443,8 @@ header .container {
     color: #fff;
  }
  .resume-wrap-content {
-    width: calc(100% -100px);
+   
+    width: calc(100% - 100px);
     padding: 0 0 10px 10px;
  }
 
@@ -454,13 +455,12 @@ header .container {
     font-size: 20px;
     color: var(--title-color);
 }
-.resume-wrap-conten .position {
+.resume-wrap-content .position {
      color: var(--subtitle-color);
      font-size: 14px;
-     font-weight: 400;
-
+     font-weight: 600;
 }
-.resume-wrap-conten p {
+.resume-wrap-content p {
     color: var(--subtitle-color);
     font-size: 14px;
     margin-top: 15px;
@@ -471,16 +471,16 @@ header .container {
 }
 .resume_wrap:hover .resume_wrap_icon {
     background-color: #faf0ff;
-    /* color: var(--main-color); */
+    color: var(--main-color);
 }
 .resume_wrap:hover .resume_wrap_icon ion-icon {
     color: var(--main-color);
 }
-/* .resume_wrap:hover h4,
+.resume_wrap:hover h4,
 .resume_wrap:hover span,
 .resume_wrap:hover p {
     color: #fff;
-} */
+}
 
 .pregressBoxs {
     gap: 3rem;
@@ -555,7 +555,7 @@ header .container {
 }
 .Por_card{
     background-color: #faf9ff;
-    height: auto;
+    height: 450px;
     display: flex;
     border-radius: 5px;
     padding-top: 10px;
@@ -574,9 +574,9 @@ header .container {
 .Por_card img {
     position: relative;
     transition: transform 0.3s ease; 
-    width: 90%;
-    height: 50%;
-    object-fit: cover;
+    width: 300px;
+    height: 150px;
+    object-fit: fill;
     border-radius: 10px;
 }
 .por_texts {
