--- a/style.css
+++ b/style.css
@@ -579,6 +579,19 @@ header .container {
     object-fit: fill;
     border-radius: 10px;
 }
+/* .pro_in_img{
+    position: relative;
+    left: 0px;
+    top: -20px;
+    z-index: -1;
+    color: var(--main-color);
+}
+.Por_card:hover .pro_in_img{
+    z-index: 1;
+} */
+.live_demo {
+    cursor: not-allowed;
+}
 .por_texts {
     margin-top: 10px;
     width: calc(100% -110px);
